<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ValutesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvРeading"
            android:text="@string/heading"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAbbreviatedNameOfColumn"
                android:text="@string/valute_text"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvNominalNameOfColumn"
                android:text="@string/nominal_text"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvValueNameOfColumn"
                android:text="@string/course_text"
                android:textSize="20sp"
                android:gravity="right"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvValutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</FrameLayout>