<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConvertFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvAbbreviatedNameOfColumn"
                        android:text="@string/valute_text"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvNominalNameOfColumn"
                        android:text="@string/nominal_text"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvValueNameOfColumn"
                        android:text="@string/course_text"
                        android:textSize="20sp"
                        android:gravity="right"
                        android:layout_marginEnd="10dp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvFullName"
                    android:hint="Full name valute"
                    android:textSize="17sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvAbbreviatedName"
                        android:hint="AUD"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvNominal"
                        android:hint="1"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvValue"
                        android:hint="100"
                        android:textSize="20sp"
                        android:gravity="right"
                        android:layout_marginEnd="10dp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>




            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/tvWriteSum"
            android:text="@string/write_sum_convert"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/etSum"
            android:text=""
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/bntConvert"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/convert"/>

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/tvConvertText"
            android:text="@string/sum_in_valute"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tvConvertResult"
            android:text=""
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</FrameLayout>